Added stack trace printing to the snippet exception handler Fixed analysis runtime deployment