@@ -12,10 +12,8 @@ fi
 # to enable shared memory, remove ",ipc.socket" from the options
 JBORAT_AGENT_OPTS="1234,localhost,ipc.socket"
 
-java -XX:MaxPermSize=128m \
-    -Xmx2G \
-    -javaagent:build/dislagent-unspec.jar \
-    -Xbootclasspath/p:build/dislagent-unspec.jar \
-    -agentpath:${JBORAT_AGENT}=${JBORAT_AGENT_OPTS} \
-    -cp ./bin \
-     $*
+java -agentpath:${JBORAT_AGENT}=${JBORAT_AGENT_OPTS} \
+     -javaagent:build/dislagent-unspec.jar \
+     -Xbootclasspath/a:build/dislagent-unspec.jar:build/dislinstr.jar \
+     -cp bin/ \
+      $*
